samples/_failures_safe/1761336876_ac0e6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27e91f69.c: In function ‘main’:
./samples/SAFE/__tmp_27e91f69.c:155:5: error: expected expression at end of input
  155 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_27e91f69.c:155:5: error: expected declaration or statement at end of input
